--- a/app/assets/javascripts/common/partials/property_fields.html
+++ b/app/assets/javascripts/common/partials/property_fields.html
@@ -19,23 +19,23 @@
 
     <div class="inline fields">
         <div class="sixteen wide field">
-            <label style="width: 200px">Gross Floor Area</label>
+            <label style="width: 200px">Gross Floor Area (sq.ft)</label>
             <div class="ten wide field required" ng-class="{error: !propertyModel.floor_area && forms.hasValidated}">
               <input type="number" ng-model="propertyModel.floor_area"
                    required
                    min="0"
-                   placeholder="GFA">
+                   placeholder="GFA in Square Feet">
             </div>
-            <div class="six wide field required" ng-class="{error: !propertyModel.floor_area_units && forms.hasValidated}">
-              <select class="ui dropdown"
-                  dropdown
-                  ng-model="propertyModel.floor_area_units"
-                  ng-options="item.id as item.name for item in buildingProperties.areaUnits"
-                  required>
-                <option value="">Select</option>
-              </select>
-            </div>
-          </div>
+            <!--<div class="six wide field required" ng-class="{error: !propertyModel.floor_area_units && forms.hasValidated}">-->
+              <!--<select class="ui dropdown"-->
+                  <!--dropdown-->
+                  <!--ng-model="propertyModel.floor_area_units"-->
+                  <!--ng-options="item.id as item.name for item in buildingProperties.areaUnits"-->
+                  <!--required>-->
+                <!--<option value="">Select</option>-->
+              <!--</select>-->
+            <!--</div>-->
+        </div>
     </div>
 
 </div>
