return doubles from file parser

--- a/app/assets/javascripts/common/partials/files.html
+++ b/app/assets/javascripts/common/partials/files.html
@@ -30,6 +30,12 @@
                 {{attachment.name}}
             </p>
         </div>
+
+        <div class="field" ng-if="csvData !== undefined">
+            <p style="color:black;">
+                OK
+            </p>
+        </div>
     </div>
     </div>
 </form>
