csv submit button automatically generates results

--- a/app/assets/javascripts/common/partials/files.html
+++ b/app/assets/javascripts/common/partials/files.html
@@ -2,6 +2,11 @@
 <form name="form" class="ui form"  ng-class="{'error': error !== undefined}">
     <div class = "ui equal wide center aligned grid">
         <div class = "ui row">
+            <p style = "margin-bottom: 1em;">
+                Upload your CA ZERO Code csv file exported from CBECC-Com
+            </p>
+        </div>
+        <div class = "ui row">
             <div class = "column">
                 <button class="ui blue button"
                         style = "margin-bottom: 2em; padding: 1.1em 2em; background-color: #4061aa"
