--- a/app/assets/javascripts/common/partials/files.html
+++ b/app/assets/javascripts/common/partials/files.html
@@ -1,12 +1,12 @@
 
 <form name="form" class="ui form"  ng-class="{'error': error !== undefined}">
     <div class = "ui equal wide center aligned grid">
-        <div class = "ui row">
+        <div class = "ui center aligned row">
             <p style = "margin-bottom: 1em;">
-                Upload your CA ZERO Code csv file exported from CBECC-Com
+                {{ uploadText }} {{attachment.name ? ": " + attachment.name : "" }}
             </p>
         </div>
-        <div class = "ui row">
+        <div class = "ui center aligned row">
             <div class = "column">
                 <button class="ui blue button"
                         style = "margin-bottom: 2em; padding: 1.1em 2em; background-color: #4061aa"
@@ -15,14 +15,14 @@
                     name="attachment"
                     ngf-max-size="20MB" ng-class="{disabled: loadingFileFiller.attachmentName !== undefined}"
                    >
-                        {{ "Upload CSV" }}
+                        {{ "Select CSV" }}
                 </button>
 
             <button ng-disabled="attachment === undefined"
                 class="ui green button"
                     style = "margin-bottom: 2em; padding: 1.1em 2em; background-color: #5ba372"
                 ng-class="{loading: loading}"
-                type="submit" ng-click="submitFile()">Submit
+                type="submit" ng-click="submitFile()">Upload
             </button>
             <!--<p ng-if="attachment === undefined && loadingFileFiller.attachmentName === undefined">
                 << Upload your data here >>
