--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -12,7 +12,7 @@ h1 {
 
 h2 {
     font-family:'Gesta','Open Sans', Arial, sans-serif !important;
-    font-weight: 400 !important;
+    font-weight: 200 !important;
     font-size: 1.2em !important;
     color: black !important;
 }
@@ -67,6 +67,11 @@ table.rimas {
 a.drop {
     color: #06a1f9 !important;
     font-weight: 400 !important;
+    font-style: italic;
+}
+
+a {
+    color: #06a1f9 !important;
 }
 
 table.rimas td {
