--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -5,21 +5,28 @@ body {
 
 h1 {
     font-family:'Gesta','Open Sans', Arial, sans-serif !important;
-    font-size: 1.6em !important;
+    font-size: 1.5em !important;
     font-weight:400 !important;
     color: black !important;
 }
 h2 {
     font-family:'Gesta','Open Sans', Arial, sans-serif !important;
     font-weight: 200 !important;
-    font-size: 1.2em !important;
+    font-size: 1.25em !important;
     color: black !important;
 }
 
 h3 {
     font-family:'Gesta','Open Sans', Arial, sans-serif !important;
     color: black !important;
-    font-size: 1em !important;
+    font-size: 1.13em !important;
+}
+
+p {
+    font-family:'Gesta','Open Sans', Arial, sans-serif !important;
+    color: rgba(0,0,0,.6);
+    font-size: 1.13em;
+    line-height: 1.5em;
 }
 
 .ui.segment {
