--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="@routes.Assets.versioned("javascripts/semantic/transition.css")" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald:300,400,700" />
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://use.typekit.net/aye2sbm.css">
+
 
 
 
