--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
 
     <title data-ng-bind="pageTitle"></title>
     <!-- Highchart scripts !-->
-    <link rel="shortcut icon" type="image/x-icon" href="@routes.Assets.versioned("images/favicon.ico")">
+    <link rel="shortcut icon" type="image/x-icon" href="@routes.Assets.versioned("images/favicon.png")">
     <link rel="stylesheet" href="@routes.Assets.versioned("javascripts/semantic/semantic.css")" />
     <link rel="stylesheet" href="@routes.Assets.versioned("javascripts/semantic/transition.css")" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald:300,400,700" />
