added toolkit link

--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -5,10 +5,11 @@
             <img src="/assets/images/maalka-logo.svg" style="width:100px;">
         </div>
         <div class="right menu">
-            <a class="item" href="#/">home</a>
-            <a class="item" href="#/usecase">use case</a>
-            <a class="item" a target="_blank" href="https://www.maalka.com/mpp">about</a>
-            <a class="item" a target="_blank" href="https://github.com/Maalka/portfolio-codes">repository</a>
+            <a class="item" href="#/">Home</a>
+            <a class="item" a target="_blank" href="https://github.com/Maalka/portfolio-codes">Repository</a>
+            <a class="item" href="#/usecase">Use Case</a>
+            <a class="item" a target="_blank" href="https://www.maalka.com/mpp">About</a>
+            <a class="item" a target="_blank" href="https://www.maalka.com/tools">Toolkit</a>
         </div>
     </div>
 </div>
